@@ -3,6 +3,7 @@ ZEsarUX 11.1 - Zorro edition. 30 Julio 2024
 * Cosas nuevas agregadas:
 
 Agregado emulación del ZX Microdrive en ZX Spectrum
+Agregada emulación de extensión de memoria LEC memory
 Agregadas máquinas Czerweny CZ 1000, CZ 1500, CZ 1000 Plus, CZ 1500 Plus, CZ 2000, CZ Spectrum, CZ Spectrum Plus
 Agregar función de "Memory Cheat": util para encontrar contadores de energia, bombas, munición o cualquier otro truco de un juego
 Agregado menú para buscar cadenas de texto en memoria
