@@ -140,6 +140,8 @@
 
 * Emula SamRam interface de Gerton Lunter (autor del famoso Z80 emulator)
 
+* Emula LEC Memory extension
+
 * Emula HiLow DataDrive
 
 * Soporta tarjetas RAM, EPROM, Intel Flash y Hybrid (RAM+EPROM) en Z88
