@@ -463,3 +463,4 @@ al microdrive desde el final?
 https://trastero.speccy.org/cosas/FLeon/todo_sobre_la_ram_y_rom_lec.txt
 https://trastero.speccy.org/cosas/FLeon/Fleon.htm
 
+-agregar memory zone lec
