@@ -29,5 +29,6 @@
 
 extern z80_bit lec_enabled;
 extern void lec_out_port(z80_byte value);
+extern void lec_reset(void);
 
 #endif
